Added load state from data.json

--- a/Tracker/Resources/layout/activity_main.axml
+++ b/Tracker/Resources/layout/activity_main.axml
@@ -7,7 +7,7 @@
     android:theme="@android:style/Theme.Material">
     <LinearLayout
         android:id="@+id/goalbox"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:id="@+id/goal_total"
             android:textSize="18sp"
-            android:text="GOAL_PLACEHOLDER" />
+            android:text="@string/goal_total" />
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
