Added save to file, & started button functionality
+ state now saves to file on close & adding todays progress.
+ button to add todays progress now works.
+ added temp debuging button to clear data file.
+ now copies data file to writable directory on first launch and uses that file so long as it exists.

--- a/Tracker/Resources/layout/activity_main.axml
+++ b/Tracker/Resources/layout/activity_main.axml
@@ -119,5 +119,10 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content" />
         </GridLayout>
+        <Button
+            android:id="@+id/debug"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Clear data" />
     </LinearLayout>
 </RelativeLayout>
